fix: alterações nas rotas /teams para adptar na VPS
